tests/NormalTests/paczka1/small_fuzzy/86688125.err
Error in line 6: Vim S578 18,4
Error in line 11: Vim S200 21,8
Error in line 10: q3vzh5 S598 97,4
Error in line 4: 8AXdCsL S200 19,1
